--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
-  "name": "macro-view",
+  "name": "macro-view-test",
   "private": true,
   "version": "1.0.0",
   "author": "Team Macro",
   "main": "lib/index.js",
+  "scripts": {
+    "build": "rm -rf lib; babel src --out-dir lib",
+    "watch": "npm run build -- --watch"
+  },
+  "babel": {
+    "presets": [
+      "steelbrain"
+    ]
+  },
   "dependencies": {
     "detect-browser": "1.5.0",
     "gloss": "^5.0.0",
@@ -14,5 +23,9 @@
     "mobx-class-helpers": "*",
     "mobx-persist": "^0.2.0",
     "mobx-react": "^4.1.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.22.2",
+    "babel-preset-steelbrain": "^4.0.2"
   }
 }
