--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "babel-cli": "^6.22.2",
     "babel-preset-steelbrain": "^4.0.2"
+  },
+  "dependencies": {
+    "react": "^15.4.2"
   }
 }
